--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <div class="container">
         <h1>Will you be my Valentine? 💕</h1>
 
-        <div class="gif-container">
-            <img id="cat-gif"
-                src="https://tenor.com/view/pingu-pinga-eating-cotton-candy-sugar-gif-11813200625301887447"
-                alt="cute character">
-        </div>
+        <div class="tenor-gif-embed" data-postid="11813200625301887447" data-share-method="host"
+            data-aspect-ratio="1.33155" data-width="100%"><a
+                href="https://tenor.com/view/pingu-pinga-eating-cotton-candy-sugar-gif-11813200625301887447">Pingu Pinga
+                GIF</a>from <a href="https://tenor.com/search/pingu-gifs">Pingu GIFs</a></div>
+        <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
         <div class="buttons">
             <button id="yes-btn" onclick="handleYesClick()">Yes</button>
