--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <div class="container">
         <h1>Will you be my Valentine? 💕</h1>
 
-        <div class="tenor-gif-embed" data-postid="11813200625301887447" data-share-method="host"
-            data-aspect-ratio="1.33155" data-width="100%"><a
-                href="https://tenor.com/view/pingu-pinga-eating-cotton-candy-sugar-gif-11813200625301887447">Pingu Pinga
-                GIF</a>from <a href="https://tenor.com/search/pingu-gifs">Pingu GIFs</a></div>
-        <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+        <div class="gif-container">
+            <img id="cat-gif"
+                src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExaDhxMWtqNHlobm85bzl2NWplN3BteHdodmdzOWRlZXYyNWVoaDBmdyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/Cmr1OMJ2FN0B2/giphy.gif"
+                alt="cute character">
+        </div>
 
         <div class="buttons">
             <button id="yes-btn" onclick="handleYesClick()">Yes</button>
