--- a/yes.html
+++ b/yes.html
@@ -18,10 +18,12 @@
         <h1 class="yes-title">Knew you would say yes! 🎉</h1>
 
         <div class="gif-container">
-            <img id="cat-gif" src="https://media.tenor.com/eNHbizSfVb0AAAAj/lovemode-cute.gif" alt="celebrating">
+            <img id="cat-gif"
+                src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExajV3YTBkbzk3cTRqaTEwMndiZXBiOGo0bW50NXF1OGVwdGI0aHR6dCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/ZKfSKVLrWgpWfo7gBa/giphy.gif"
+                alt="celebrating">
         </div>
 
-        <p class="yes-message">You just made me the happiest person! 💕</p>
+        <p class="yes-message">You just made me the happiest person! Pinguuuuuu 💕</p>
     </div>
 
     <audio id="bg-music" loop>
