--- a/yes.html
+++ b/yes.html
@@ -26,7 +26,7 @@
         <p class="yes-message">You just made me the happiest person! Pinguuuuuu 💕</p>
     </div>
 
-    <audio id="bg-music" loop>
+    <audio id="bg-music" loop autoplay>
         <source src="music/Project - 12.02.26, 17.54.mp3" type="audio/mpeg">
     </audio>
 
